Fix navigation on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,8 @@ h3 {
 }
 .header {
   display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
   justify-content: space-between;
   align-items: center;
 }
